# lot

./: README.md  pyproject.toml  requirements.txt
lot/: list_open_tabs.py
